# Veritensor

./: .pre-commit-hooks.yaml  .trivyignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  entrypoint.sh  index.html  pyproject.toml  veritensor.yaml
.github/workflows/: release.yaml  scanner-ci.yaml  security.yaml
audits/: mcp_audit_report_anonymized.md
scanner/: Dockerfile
scanner/src/aegis/engines/hashing/: calculator.py
scanner/src/aegis/engines/static/: pickle_engine.py  rules.py
scanner/src/aegis/integrations/: huggingface.py
scanner/src/aegis/reporting/: sarif.py
scanner/tests/unit/: test_cosign.py  test_hashing.py  test_pickle.py
src/veritensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/veritensor/cli/: main.py  test.xlsm
src/veritensor/core/: cache.py  config.py  entropy.py  file_utils.py  networking.py  safe_zip.py  streaming.py  text_utils.py  types.py  utils.py
src/veritensor/engines/container/: archive_engine.py
src/veritensor/engines/content/: injection.py  pii.py
src/veritensor/engines/data/: dataset_engine.py  excel_engine.py
src/veritensor/engines/hashing/: readers.py
src/veritensor/engines/static/: dependency_engine.py  keras_engine.py  mcp_permission_auditor.py  mcp_scanner.py  notebook_engine.py  pickle_engine.py  rules.py  signatures.yaml
src/veritensor/integrations/: chroma_guard.py  cosign.py  enterprise_scanner.py  huggingface.py  langchain_guard.py  llamaindex_guard.py  rag.py  unstructured_guard.py
src/veritensor/reporting/: compliance_report.py  excel_report.py  html_report.py  manifest.py  sarif.py  sbom.py  telemetry.py
tests/: conftest.py
tests/integration/: test_flow.py
tests/unit/: test_archives.py  test_cache_sqlite.py  test_cli.py  test_cosign.py  test_dataset_engine.py  test_dependency_engine.py  test_docs.py  test_excel.py  test_hashing.py  test_integrations.py  test_manifest.py  test_mcp_permission_auditor.py  test_notebooks.py  test_pickle.py  test_pii.py  test_rag.py  test_rules.py  test_telemetry.py  test_text_utils.py  test_whl.py  test_worker.py  tests_mcp_scanner.py
tests/utils/: malware_gen.py
