[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veritensor-scanner"
version = "4.1.0"
description = "AI Model Security Scanner & Gatekeeper"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.19.0",
]

[project.scripts]
veritensor = "veritensor.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
